[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entities/CleanOrb/clean_orb_forground.png" type="Texture" id=1]
[ext_resource path="res://Entities/CleanOrb/clean_orb_full.png" type="Texture" id=2]
[ext_resource path="res://Entities/Digit/DigitSprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/CleanOrb/CleanOrb.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 26.3392

[sub_resource type="CircleShape2D" id=2]
radius = 12.4806

[sub_resource type="Animation" id=3]
resource_name = "ball_digit"
length = 2.0
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("DigitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.05, 0.075, 0.1, 0.125, 0.15, 0.175 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 24, 25, 26, 27, 28, 29 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DigitSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 46 ), Vector2( -0.0561371, -8.0368 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DigitSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.625 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_ball"
} ]
}

[node name="CleanOrb" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="Main" type="Sprite" parent="."]
z_index = 1000
z_as_relative = false
texture = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="SquishZone" type="Area2D" parent="."]
gravity_point = true

[node name="SuckupCollision" type="CollisionShape2D" parent="SquishZone"]
position = Vector2( -0.483444, 23.8404 )
shape = SubResource( 2 )

[node name="DigitSprite" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( -0.0561371, -8.0368 )
frame = 29

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ball_digit = SubResource( 3 )

[node name="BallSpawnPoint" type="Node2D" parent="."]
position = Vector2( 31.7194, -7.23597 )
